--- a/bank_frontend/src/components/Page.css
+++ b/bank_frontend/src/components/Page.css
@@ -1,4 +1,4 @@
-/* ClientPage.css */
+/* Page.css */
 .client-page {
     max-width: 600px;
     margin: 20px auto;
@@ -50,4 +50,3 @@
     border: 1px solid #ccc;
     border-radius: 4px;
   }
-  
