--- a/bank_frontend/src/components/ListView.css
+++ b/bank_frontend/src/components/ListView.css
@@ -1,5 +1,10 @@
 /* Общие стили для форм */
-.form-standard {
+.container {
+  padding: 20px;
+}
+
+.form-standard,
+.filter-form {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -53,7 +58,6 @@
   background-color: #0056b3;
 }
 
-/* Общие стили для кнопок */
 .button {
   padding: 10px 15px;
   border: none;
@@ -71,15 +75,6 @@
   background-color: #218838;
 }
 
-.button-danger {
-  background-color: #dc3545;
-}
-
-.button-danger:hover {
-  background-color: #c82333;
-}
-
-/* Стили для списков и карточек */
 .list-container {
   display: flex;
   flex-wrap: wrap;
@@ -98,7 +93,6 @@
   cursor: pointer;
 }
 
-/* Сообщения об ошибках */
 .alert-danger {
   color: #dc3545;
   background-color: #f8d7da;
@@ -107,6 +101,7 @@
   border-radius: 5px;
   margin: 20px 0;
 }
+
 
 /* Модальные окна */
 .modal-backdrop {
